--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row">
+        <div class="row d-flex flex-column-reverse flex-md-row">
             <div id="player-1" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
                 <div id="player-1-text" class="text-white">
                     <h1 id="player-1-score">0</h1>
