--- a/index.html
+++ b/index.html
@@ -15,14 +15,20 @@
         <div class="row d-flex flex-column-reverse flex-md-row">
             <div id="player-1" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
                 <div id="player-1-text" class="text-white">
-                    <h1 id="player-1-score">0</h1>
-                    <h1>Tap!</h1>
+                    <h1 id="player-1-score" class="text-center">0</h1>
+                    <h1 class="d-block d-md-none">Tap Screen!</h1>
+                    <div class="d-none d-md-block">
+                        <span class="h1 me-2">Tap</span><button class="btn btn-outline-light mb-3">A</button><span class="h1 ms-2">!</span>
+                    </div>
                 </div>
             </div>
             <div id="player-2" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
                 <div id="player-2-text" class="text-white">
-                    <h1 id="player-2-score">0</h1>
-                    <h1>Tap!</h1>
+                    <h1 id="player-2-score" class="text-center">0</h1>
+                    <h1 class="d-block d-md-none">Tap Screen!</h1>
+                    <div class="d-none d-md-block">
+                        <span class="h1 me-2">Tap</span><button class="btn btn-outline-light mb-3">L</button><span class="h1 ms-2">!</span>
+                    </div>
                 </div>
             </div>
         </div>
