--- a/index.html
+++ b/index.html
@@ -11,14 +11,22 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="progress fixed-top m-3" role="progressbar" aria-label="Example 20px high" aria-valuenow="25" aria-valuemin="0"
+    <div id="main" class="container-fluid">
+        <div id="progress-group" class="progress fixed-top m-3 d-none" role="progressbar" aria-valuemin="0"
             aria-valuemax="100" style="height: 20px">
             <div id="progress-time" class="progress-bar bg-warning" style="width: 100%"></div>
+            <small id="timer" class="justify-content-center align-items-center d-flex position-absolute w-100 h-100">Ready</small>
         </div>
-        <div class="row d-flex flex-column-reverse flex-md-row">
+        <div id="start-msg" class="fixed-top m-auto" style="width:100px;top:45vh;">
+            <button id="start-btn" class="btn btn-light btn-lg w-100">Start Game</button>
+        </div>
+        <div id="end-msg" class="fixed-top m-auto d-none" style="width:100px;top:45vh;">
+            <h1>Winner</h1>
+            <button id="new-start-btn" class="btn btn-light btn-lg">Start Game</button>
+        </div>
+        <div id="player-control" class="row d-flex flex-column-reverse flex-md-row">
             <div id="player-1" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
-                <div id="player-1-text" class="text-white">
+                <div id="player-1-text" class="text-white d-none">
                     <h1 id="player-1-score" class="text-center">0</h1>
                     <h1 class="d-block d-md-none">Tap Screen!</h1>
                     <div class="d-none d-md-block">
@@ -28,7 +36,7 @@
                 </div>
             </div>
             <div id="player-2" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
-                <div id="player-2-text" class="text-white">
+                <div id="player-2-text" class="text-white d-none">
                     <h1 id="player-2-score" class="text-center">0</h1>
                     <h1 class="d-block d-md-none">Tap Screen!</h1>
                     <div class="d-none d-md-block">
