added scoring and scenarios. edited some visual stuff.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div id="player-control" class="row d-flex flex-column-reverse flex-md-row">
             <div id="player-1" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
+                <div id="player-1-outcome-text" class="text-white h1"></div>
                 <div id="player-1-text" class="text-white d-none">
                     <h1 id="player-1-score" class="text-center">0</h1>
                     <h1 class="d-block d-md-none">Tap Screen!</h1>
@@ -36,6 +37,7 @@
                 </div>
             </div>
             <div id="player-2" class="col col-12 col-md-6 d-flex justify-content-center align-items-center">
+                <div id="player-2-outcome-text" class="text-white h1"></div>
                 <div id="player-2-text" class="text-white d-none">
                     <h1 id="player-2-score" class="text-center">0</h1>
                     <h1 class="d-block d-md-none">Tap Screen!</h1>
